[package]
name = "pulsar"
version = "0.0.1"
authors = ["esavier <esavier@erglabso.rg>"]
edition = "2018"

[dependencies]
async-std 	= "1.7.0"
async-trait = "0.1.41"
byteorder 	= "1.3.4"
bytes 		= "0.6.0"
either 		= "1.6.1"
thiserror 	= "1.0.22"
multihash 	= "0.13.1"
prost 		= "0.6.1"
rand 		= "0.7.3"
void 		= "1.0.2"
sha2 		= "0.9.2"
env_logger 	= "0.8.1"
log 		= "0.4.11"
fern 		= "0.6.0"
chrono 		= "0.4.19"
bincode 	= "1.3.1"
futures 	= { version = "0.3.8", features = ["alloc", "std"]}
base64 		= { version = "0.13.0", features = ["alloc"]}
serde 		= { version = "1.0.117", features = ["derive"]}
uuid 		= { version = "0.8.1", features = ["serde", "v4"]}
libp2p 		= { version = "0.30.1", features = ["deflate", "dns", "floodsub", "identify", "kad", "gossipsub", "mdns-async-std", "mplex", "noise", "ping", "plaintext", "pnet", "request-response", "secp256k1", "tcp-async-std", "uds", "wasm-ext", "websocket", "yamux"]}



#libp2p 				= { version = "*", features = ["deflate", "dns", "floodsub", "identify", "kad", "gossipsub", "mdns-async-std", "mdns-tokio", "mplex", "noise", "ping", "plaintext", "pnet", "request-response", "secp256k1", "tcp-async-std", "tcp-tokio", "uds", "wasm-ext", "websocket", "yamux"] }